# guarddog

./: .gitignore  config.example.ini  orator.example.yml  pyproject.toml  start.py
guarddog/: __init__.py  assets.py  bot.py  doog.py  helpers.py  lang.py
migrations/: 2020_12_27_101923_create_banlist_table.py
tests/: test_guarddog.py
