[tool.poetry]
name = "guarddog"
version = "0.1.0"
description = ""
authors = ["Makoto <makoto+github@taiga.sh>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
orator = "^0.9.9"
loguru = "^0.5.3"
mysql-connector-python = "^8.0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
